--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@babel/preset-env": "^7.15.6",
     "axios": "^0.22.0",
     "express": "^4.17.1",
+    "nodemon": "^2.0.13",
     "pg": "^8.7.1"
   },
   "devDependencies": {
